parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> opt_var_section BEGIN stmt_list END DOT
Rule 2     opt_var_section -> VAR var_decls
Rule 3     opt_var_section -> empty
Rule 4     var_decls -> var_decls var_decl
Rule 5     var_decls -> var_decl
Rule 6     var_decl -> id_list COLON type_name SEMI
Rule 7     type_name -> INTEGER
Rule 8     type_name -> REAL
Rule 9     type_name -> BOOLEAN
Rule 10    id_list -> ID
Rule 11    id_list -> id_list COMMA ID
Rule 12    stmt_list -> stmt_list SEMI stmt
Rule 13    stmt_list -> stmt
Rule 14    stmt -> assign_stmt
Rule 15    stmt -> if_stmt
Rule 16    stmt -> while_stmt
Rule 17    stmt -> for_stmt
Rule 18    stmt -> repeat_stmt
Rule 19    stmt -> io_stmt
Rule 20    stmt -> block
Rule 21    stmt -> empty
Rule 22    block -> BEGIN stmt_list END
Rule 23    assign_stmt -> ID ASSIGN expr
Rule 24    if_stmt -> IF expr THEN stmt opt_else
Rule 25    opt_else -> ELSE stmt
Rule 26    opt_else -> empty
Rule 27    while_stmt -> WHILE expr DO stmt
Rule 28    for_stmt -> FOR ID ASSIGN expr TO expr DO stmt
Rule 29    for_stmt -> FOR ID ASSIGN expr DOWNTO expr DO stmt
Rule 30    repeat_stmt -> REPEAT stmt_list UNTIL expr
Rule 31    io_stmt -> WRITELN LPAREN expr_list RPAREN
Rule 32    io_stmt -> WRITE LPAREN expr_list RPAREN
Rule 33    io_stmt -> READLN LPAREN id_expr_list RPAREN
Rule 34    io_stmt -> READ LPAREN id_expr_list RPAREN
Rule 35    expr_list -> expr
Rule 36    expr_list -> expr_list COMMA expr
Rule 37    id_expr_list -> ID
Rule 38    id_expr_list -> id_expr_list COMMA ID
Rule 39    expr -> expr PLUS expr
Rule 40    expr -> expr MINUS expr
Rule 41    expr -> expr TIMES expr
Rule 42    expr -> expr DIVIDE expr
Rule 43    expr -> expr DIV expr
Rule 44    expr -> expr MOD expr
Rule 45    expr -> expr EQ expr
Rule 46    expr -> expr NE expr
Rule 47    expr -> expr LT expr
Rule 48    expr -> expr LE expr
Rule 49    expr -> expr GT expr
Rule 50    expr -> expr GE expr
Rule 51    expr -> expr AND expr
Rule 52    expr -> expr OR expr
Rule 53    expr -> MINUS expr
Rule 54    expr -> NOT expr
Rule 55    expr -> LPAREN expr RPAREN
Rule 56    expr -> INT
Rule 57    expr -> FLOAT
Rule 58    expr -> ID
Rule 59    empty -> <empty>

Terminals, with rules where they appear

AND                  : 51
ASSIGN               : 23 28 29
BEGIN                : 1 22
BOOLEAN              : 9
COLON                : 6
COMMA                : 11 36 38
DIV                  : 43
DIVIDE               : 42
DO                   : 27 28 29
DOT                  : 1
DOWNTO               : 29
ELSE                 : 25
END                  : 1 22
EQ                   : 45
FLOAT                : 57
FOR                  : 28 29
GE                   : 50
GT                   : 49
ID                   : 10 11 23 28 29 37 38 58
IF                   : 24
INT                  : 56
INTEGER              : 7
LE                   : 48
LPAREN               : 31 32 33 34 55
LT                   : 47
MINUS                : 40 53
MOD                  : 44
NE                   : 46
NOT                  : 54
OR                   : 52
PLUS                 : 39
READ                 : 34
READLN               : 33
REAL                 : 8
REPEAT               : 30
RPAREN               : 31 32 33 34 55
SEMI                 : 6 12
THEN                 : 24
TIMES                : 41
TO                   : 28
UNTIL                : 30
VAR                  : 2
WHILE                : 27
WRITE                : 32
WRITELN              : 31
error                : 

Nonterminals, with rules where they appear

assign_stmt          : 14
block                : 20
empty                : 3 21 26
expr                 : 23 24 27 28 28 29 29 30 35 36 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 54 55
expr_list            : 31 32 36
for_stmt             : 17
id_expr_list         : 33 34 38
id_list              : 6 11
if_stmt              : 15
io_stmt              : 19
opt_else             : 24
opt_var_section      : 1
program              : 0
repeat_stmt          : 18
stmt                 : 12 13 24 25 27 28 29
stmt_list            : 1 12 22 30
type_name            : 6
var_decl             : 4 5
var_decls            : 2 4
while_stmt           : 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . opt_var_section BEGIN stmt_list END DOT
    (2) opt_var_section -> . VAR var_decls
    (3) opt_var_section -> . empty
    (59) empty -> .

    VAR             shift and go to state 3
    BEGIN           reduce using rule 59 (empty -> .)

    program                        shift and go to state 1
    opt_var_section                shift and go to state 2
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> opt_var_section . BEGIN stmt_list END DOT

    BEGIN           shift and go to state 5


state 3

    (2) opt_var_section -> VAR . var_decls
    (4) var_decls -> . var_decls var_decl
    (5) var_decls -> . var_decl
    (6) var_decl -> . id_list COLON type_name SEMI
    (10) id_list -> . ID
    (11) id_list -> . id_list COMMA ID

    ID              shift and go to state 9

    var_decls                      shift and go to state 6
    var_decl                       shift and go to state 7
    id_list                        shift and go to state 8

state 4

    (3) opt_var_section -> empty .

    BEGIN           reduce using rule 3 (opt_var_section -> empty .)


state 5

    (1) program -> opt_var_section BEGIN . stmt_list END DOT
    (12) stmt_list -> . stmt_list SEMI stmt
    (13) stmt_list -> . stmt
    (14) stmt -> . assign_stmt
    (15) stmt -> . if_stmt
    (16) stmt -> . while_stmt
    (17) stmt -> . for_stmt
    (18) stmt -> . repeat_stmt
    (19) stmt -> . io_stmt
    (20) stmt -> . block
    (21) stmt -> . empty
    (23) assign_stmt -> . ID ASSIGN expr
    (24) if_stmt -> . IF expr THEN stmt opt_else
    (27) while_stmt -> . WHILE expr DO stmt
    (28) for_stmt -> . FOR ID ASSIGN expr TO expr DO stmt
    (29) for_stmt -> . FOR ID ASSIGN expr DOWNTO expr DO stmt
    (30) repeat_stmt -> . REPEAT stmt_list UNTIL expr
    (31) io_stmt -> . WRITELN LPAREN expr_list RPAREN
    (32) io_stmt -> . WRITE LPAREN expr_list RPAREN
    (33) io_stmt -> . READLN LPAREN id_expr_list RPAREN
    (34) io_stmt -> . READ LPAREN id_expr_list RPAREN
    (22) block -> . BEGIN stmt_list END
    (59) empty -> .

    ID              shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    REPEAT          shift and go to state 25
    WRITELN         shift and go to state 26
    WRITE           shift and go to state 27
    READLN          shift and go to state 28
    READ            shift and go to state 29
    BEGIN           shift and go to state 10
    END             reduce using rule 59 (empty -> .)
    SEMI            reduce using rule 59 (empty -> .)

    stmt_list                      shift and go to state 11
    stmt                           shift and go to state 12
    assign_stmt                    shift and go to state 13
    if_stmt                        shift and go to state 14
    while_stmt                     shift and go to state 15
    for_stmt                       shift and go to state 16
    repeat_stmt                    shift and go to state 17
    io_stmt                        shift and go to state 18
    block                          shift and go to state 19
    empty                          shift and go to state 20

state 6

    (2) opt_var_section -> VAR var_decls .
    (4) var_decls -> var_decls . var_decl
    (6) var_decl -> . id_list COLON type_name SEMI
    (10) id_list -> . ID
    (11) id_list -> . id_list COMMA ID

    BEGIN           reduce using rule 2 (opt_var_section -> VAR var_decls .)
    ID              shift and go to state 9

    var_decl                       shift and go to state 30
    id_list                        shift and go to state 8

state 7

    (5) var_decls -> var_decl .

    ID              reduce using rule 5 (var_decls -> var_decl .)
    BEGIN           reduce using rule 5 (var_decls -> var_decl .)


state 8

    (6) var_decl -> id_list . COLON type_name SEMI
    (11) id_list -> id_list . COMMA ID

    COLON           shift and go to state 31
    COMMA           shift and go to state 32


state 9

    (10) id_list -> ID .

    COLON           reduce using rule 10 (id_list -> ID .)
    COMMA           reduce using rule 10 (id_list -> ID .)


state 10

    (22) block -> BEGIN . stmt_list END
    (12) stmt_list -> . stmt_list SEMI stmt
    (13) stmt_list -> . stmt
    (14) stmt -> . assign_stmt
    (15) stmt -> . if_stmt
    (16) stmt -> . while_stmt
    (17) stmt -> . for_stmt
    (18) stmt -> . repeat_stmt
    (19) stmt -> . io_stmt
    (20) stmt -> . block
    (21) stmt -> . empty
    (23) assign_stmt -> . ID ASSIGN expr
    (24) if_stmt -> . IF expr THEN stmt opt_else
    (27) while_stmt -> . WHILE expr DO stmt
    (28) for_stmt -> . FOR ID ASSIGN expr TO expr DO stmt
    (29) for_stmt -> . FOR ID ASSIGN expr DOWNTO expr DO stmt
    (30) repeat_stmt -> . REPEAT stmt_list UNTIL expr
    (31) io_stmt -> . WRITELN LPAREN expr_list RPAREN
    (32) io_stmt -> . WRITE LPAREN expr_list RPAREN
    (33) io_stmt -> . READLN LPAREN id_expr_list RPAREN
    (34) io_stmt -> . READ LPAREN id_expr_list RPAREN
    (22) block -> . BEGIN stmt_list END
    (59) empty -> .

    ID              shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    REPEAT          shift and go to state 25
    WRITELN         shift and go to state 26
    WRITE           shift and go to state 27
    READLN          shift and go to state 28
    READ            shift and go to state 29
    BEGIN           shift and go to state 10
    END             reduce using rule 59 (empty -> .)
    SEMI            reduce using rule 59 (empty -> .)

    stmt_list                      shift and go to state 33
    stmt                           shift and go to state 12
    assign_stmt                    shift and go to state 13
    if_stmt                        shift and go to state 14
    while_stmt                     shift and go to state 15
    for_stmt                       shift and go to state 16
    repeat_stmt                    shift and go to state 17
    io_stmt                        shift and go to state 18
    block                          shift and go to state 19
    empty                          shift and go to state 20

state 11

    (1) program -> opt_var_section BEGIN stmt_list . END DOT
    (12) stmt_list -> stmt_list . SEMI stmt

    END             shift and go to state 34
    SEMI            shift and go to state 35


state 12

    (13) stmt_list -> stmt .

    END             reduce using rule 13 (stmt_list -> stmt .)
    SEMI            reduce using rule 13 (stmt_list -> stmt .)
    UNTIL           reduce using rule 13 (stmt_list -> stmt .)


state 13

    (14) stmt -> assign_stmt .

    END             reduce using rule 14 (stmt -> assign_stmt .)
    SEMI            reduce using rule 14 (stmt -> assign_stmt .)
    UNTIL           reduce using rule 14 (stmt -> assign_stmt .)
    ELSE            reduce using rule 14 (stmt -> assign_stmt .)


state 14

    (15) stmt -> if_stmt .

    END             reduce using rule 15 (stmt -> if_stmt .)
    SEMI            reduce using rule 15 (stmt -> if_stmt .)
    UNTIL           reduce using rule 15 (stmt -> if_stmt .)
    ELSE            reduce using rule 15 (stmt -> if_stmt .)


state 15

    (16) stmt -> while_stmt .

    END             reduce using rule 16 (stmt -> while_stmt .)
    SEMI            reduce using rule 16 (stmt -> while_stmt .)
    UNTIL           reduce using rule 16 (stmt -> while_stmt .)
    ELSE            reduce using rule 16 (stmt -> while_stmt .)


state 16

    (17) stmt -> for_stmt .

    END             reduce using rule 17 (stmt -> for_stmt .)
    SEMI            reduce using rule 17 (stmt -> for_stmt .)
    UNTIL           reduce using rule 17 (stmt -> for_stmt .)
    ELSE            reduce using rule 17 (stmt -> for_stmt .)


state 17

    (18) stmt -> repeat_stmt .

    END             reduce using rule 18 (stmt -> repeat_stmt .)
    SEMI            reduce using rule 18 (stmt -> repeat_stmt .)
    UNTIL           reduce using rule 18 (stmt -> repeat_stmt .)
    ELSE            reduce using rule 18 (stmt -> repeat_stmt .)


state 18

    (19) stmt -> io_stmt .

    END             reduce using rule 19 (stmt -> io_stmt .)
    SEMI            reduce using rule 19 (stmt -> io_stmt .)
    UNTIL           reduce using rule 19 (stmt -> io_stmt .)
    ELSE            reduce using rule 19 (stmt -> io_stmt .)


state 19

    (20) stmt -> block .

    END             reduce using rule 20 (stmt -> block .)
    SEMI            reduce using rule 20 (stmt -> block .)
    UNTIL           reduce using rule 20 (stmt -> block .)
    ELSE            reduce using rule 20 (stmt -> block .)


state 20

    (21) stmt -> empty .

    END             reduce using rule 21 (stmt -> empty .)
    SEMI            reduce using rule 21 (stmt -> empty .)
    UNTIL           reduce using rule 21 (stmt -> empty .)
    ELSE            reduce using rule 21 (stmt -> empty .)


state 21

    (23) assign_stmt -> ID . ASSIGN expr

    ASSIGN          shift and go to state 36


state 22

    (24) if_stmt -> IF . expr THEN stmt opt_else
    (39) expr -> . expr PLUS expr
    (40) expr -> . expr MINUS expr
    (41) expr -> . expr TIMES expr
    (42) expr -> . expr DIVIDE expr
    (43) expr -> . expr DIV expr
    (44) expr -> . expr MOD expr
    (45) expr -> . expr EQ expr
    (46) expr -> . expr NE expr
    (47) expr -> . expr LT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr GT expr
    (50) expr -> . expr GE expr
    (51) expr -> . expr AND expr
    (52) expr -> . expr OR expr
    (53) expr -> . MINUS expr
    (54) expr -> . NOT expr
    (55) expr -> . LPAREN expr RPAREN
    (56) expr -> . INT
    (57) expr -> . FLOAT
    (58) expr -> . ID

    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    LPAREN          shift and go to state 40
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    ID              shift and go to state 43

    expr                           shift and go to state 37

state 23

    (27) while_stmt -> WHILE . expr DO stmt
    (39) expr -> . expr PLUS expr
    (40) expr -> . expr MINUS expr
    (41) expr -> . expr TIMES expr
    (42) expr -> . expr DIVIDE expr
    (43) expr -> . expr DIV expr
    (44) expr -> . expr MOD expr
    (45) expr -> . expr EQ expr
    (46) expr -> . expr NE expr
    (47) expr -> . expr LT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr GT expr
    (50) expr -> . expr GE expr
    (51) expr -> . expr AND expr
    (52) expr -> . expr OR expr
    (53) expr -> . MINUS expr
    (54) expr -> . NOT expr
    (55) expr -> . LPAREN expr RPAREN
    (56) expr -> . INT
    (57) expr -> . FLOAT
    (58) expr -> . ID

    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    LPAREN          shift and go to state 40
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    ID              shift and go to state 43

    expr                           shift and go to state 44

state 24

    (28) for_stmt -> FOR . ID ASSIGN expr TO expr DO stmt
    (29) for_stmt -> FOR . ID ASSIGN expr DOWNTO expr DO stmt

    ID              shift and go to state 45


state 25

    (30) repeat_stmt -> REPEAT . stmt_list UNTIL expr
    (12) stmt_list -> . stmt_list SEMI stmt
    (13) stmt_list -> . stmt
    (14) stmt -> . assign_stmt
    (15) stmt -> . if_stmt
    (16) stmt -> . while_stmt
    (17) stmt -> . for_stmt
    (18) stmt -> . repeat_stmt
    (19) stmt -> . io_stmt
    (20) stmt -> . block
    (21) stmt -> . empty
    (23) assign_stmt -> . ID ASSIGN expr
    (24) if_stmt -> . IF expr THEN stmt opt_else
    (27) while_stmt -> . WHILE expr DO stmt
    (28) for_stmt -> . FOR ID ASSIGN expr TO expr DO stmt
    (29) for_stmt -> . FOR ID ASSIGN expr DOWNTO expr DO stmt
    (30) repeat_stmt -> . REPEAT stmt_list UNTIL expr
    (31) io_stmt -> . WRITELN LPAREN expr_list RPAREN
    (32) io_stmt -> . WRITE LPAREN expr_list RPAREN
    (33) io_stmt -> . READLN LPAREN id_expr_list RPAREN
    (34) io_stmt -> . READ LPAREN id_expr_list RPAREN
    (22) block -> . BEGIN stmt_list END
    (59) empty -> .

    ID              shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    REPEAT          shift and go to state 25
    WRITELN         shift and go to state 26
    WRITE           shift and go to state 27
    READLN          shift and go to state 28
    READ            shift and go to state 29
    BEGIN           shift and go to state 10
    UNTIL           reduce using rule 59 (empty -> .)
    SEMI            reduce using rule 59 (empty -> .)

    stmt_list                      shift and go to state 46
    stmt                           shift and go to state 12
    assign_stmt                    shift and go to state 13
    if_stmt                        shift and go to state 14
    while_stmt                     shift and go to state 15
    for_stmt                       shift and go to state 16
    repeat_stmt                    shift and go to state 17
    io_stmt                        shift and go to state 18
    block                          shift and go to state 19
    empty                          shift and go to state 20

state 26

    (31) io_stmt -> WRITELN . LPAREN expr_list RPAREN

    LPAREN          shift and go to state 47


state 27

    (32) io_stmt -> WRITE . LPAREN expr_list RPAREN

    LPAREN          shift and go to state 48


state 28

    (33) io_stmt -> READLN . LPAREN id_expr_list RPAREN

    LPAREN          shift and go to state 49


state 29

    (34) io_stmt -> READ . LPAREN id_expr_list RPAREN

    LPAREN          shift and go to state 50


state 30

    (4) var_decls -> var_decls var_decl .

    ID              reduce using rule 4 (var_decls -> var_decls var_decl .)
    BEGIN           reduce using rule 4 (var_decls -> var_decls var_decl .)


state 31

    (6) var_decl -> id_list COLON . type_name SEMI
    (7) type_name -> . INTEGER
    (8) type_name -> . REAL
    (9) type_name -> . BOOLEAN

    INTEGER         shift and go to state 52
    REAL            shift and go to state 53
    BOOLEAN         shift and go to state 54

    type_name                      shift and go to state 51

state 32

    (11) id_list -> id_list COMMA . ID

    ID              shift and go to state 55


state 33

    (22) block -> BEGIN stmt_list . END
    (12) stmt_list -> stmt_list . SEMI stmt

    END             shift and go to state 56
    SEMI            shift and go to state 35


state 34

    (1) program -> opt_var_section BEGIN stmt_list END . DOT

    DOT             shift and go to state 57


state 35

    (12) stmt_list -> stmt_list SEMI . stmt
    (14) stmt -> . assign_stmt
    (15) stmt -> . if_stmt
    (16) stmt -> . while_stmt
    (17) stmt -> . for_stmt
    (18) stmt -> . repeat_stmt
    (19) stmt -> . io_stmt
    (20) stmt -> . block
    (21) stmt -> . empty
    (23) assign_stmt -> . ID ASSIGN expr
    (24) if_stmt -> . IF expr THEN stmt opt_else
    (27) while_stmt -> . WHILE expr DO stmt
    (28) for_stmt -> . FOR ID ASSIGN expr TO expr DO stmt
    (29) for_stmt -> . FOR ID ASSIGN expr DOWNTO expr DO stmt
    (30) repeat_stmt -> . REPEAT stmt_list UNTIL expr
    (31) io_stmt -> . WRITELN LPAREN expr_list RPAREN
    (32) io_stmt -> . WRITE LPAREN expr_list RPAREN
    (33) io_stmt -> . READLN LPAREN id_expr_list RPAREN
    (34) io_stmt -> . READ LPAREN id_expr_list RPAREN
    (22) block -> . BEGIN stmt_list END
    (59) empty -> .

    ID              shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    REPEAT          shift and go to state 25
    WRITELN         shift and go to state 26
    WRITE           shift and go to state 27
    READLN          shift and go to state 28
    READ            shift and go to state 29
    BEGIN           shift and go to state 10
    END             reduce using rule 59 (empty -> .)
    SEMI            reduce using rule 59 (empty -> .)
    UNTIL           reduce using rule 59 (empty -> .)

    stmt                           shift and go to state 58
    assign_stmt                    shift and go to state 13
    if_stmt                        shift and go to state 14
    while_stmt                     shift and go to state 15
    for_stmt                       shift and go to state 16
    repeat_stmt                    shift and go to state 17
    io_stmt                        shift and go to state 18
    block                          shift and go to state 19
    empty                          shift and go to state 20

state 36

    (23) assign_stmt -> ID ASSIGN . expr
    (39) expr -> . expr PLUS expr
    (40) expr -> . expr MINUS expr
    (41) expr -> . expr TIMES expr
    (42) expr -> . expr DIVIDE expr
    (43) expr -> . expr DIV expr
    (44) expr -> . expr MOD expr
    (45) expr -> . expr EQ expr
    (46) expr -> . expr NE expr
    (47) expr -> . expr LT expr
    (48) expr -> . expr LE expr
    (49) expr -> . expr GT expr
    (50) expr -> . expr GE expr
    (51) expr -> . expr AND expr
    (52) expr -> . expr OR expr
    (53) expr -> . MINUS expr
    (54) expr -> . NOT expr
    (55) expr -> . LPAREN expr RPAREN
    (56) expr -> . INT
    (57) expr -> . FLOAT
    (58) expr -> . ID

    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    LPAREN          shift and go to state 40
    INT             shift and go to state 41
    FLOAT           shift and go to state 42
    ID              shift and go to state 43

    expr                           shift and go to state 59

state 37

    (24) if_stmt -> IF expr . THEN stmt opt_else
    (39) expr -> expr . PLUS expr
    (40) expr -> expr . MINUS expr
    (41) expr -> expr . TIMES expr
    (42) expr -> expr . DIVIDE expr
    (43) expr -> expr . DIV expr
    (44) expr -> expr . MOD expr
    (45) expr -> expr . EQ expr
    (46) expr -> expr . NE expr
    (47) expr -> expr . LT expr
    (48) expr -> expr . LE expr
    (49) expr -> expr . GT expr
    (50) expr -> expr . GE expr
    (51) expr -> expr . AND expr
    (52) expr -> expr . OR expr

    THEN            shift and go to state 60
    PLUS            shift and go to state 61
    MINUS           shift and go to state 62
    TIMES           shift and go to state 63
    DIVIDE          shift and go to state 64
    DIV             shift and go to state 65
    MOD             shift and go to state 66
    EQ              shift and go to state 67
    NE              shift and go to state 68
    LT              shift and go to state 69
    LE              shift and go to state 70
    GT              shift and go to state 71
    GE              shift and go to state 72
    AND             shift and go to state 73
    OR              shift and go to state 74


state 38

    (53) expr -> MINUS . expr
    (39) expr -> . expr PLUS expr
    (40) expr -> . expr MINUS expr
